  shortcode. You can now insert thumbnails for one or more images (that are not 
  necessarly inside the same gallery).
- NEW : [picture id="10" caption="none|alttext|desc" float="|left|right" 
            width="" height="" mode="|watermark|web20"]extra caption here[/picture]
  shortcode. You can now insert single picture with some effect, resized or not, with 
  or without caption.
- Changed : Renammed the filter 'ngg_create_gallery_thumbcode' to 'ngg_get_thumbcode'.
- Changed : Convert tags to WP-Taxonomy tables, no more need for ngg_tags, ngg_pic2tags
- Changed : Arrange fields in a new way
- Bugfix : Check for zero in Exif Focal Length
- Bugfix : Limit the length of the title in the media-upload
- Removed : Revert singlepic wrapper, breaks validation
- Removed : Do not longer check for myGallery folders
- Removed : Use now PclZip from WP Core
- Removed : Wordpress 2.1 - 2.3 files deleted

V0.97 - 10.07.2008
- Changed : Get new path contstant from WP2.6
- Changed : Minor updates for WP2.6
- Changed : Added new filters (THX to Vincent Prat) 
- Removed : Revert singlepic wrapper, breaks validation

V0.96 - 18.05.2008
- Changed : Use postbox for gallery settings 
- Added : New filter function to add custom columns
- Bugfix : Fixed width for Thickbox in Manage gallery
- Bugfix : fixed width for media upload select box
- Bugfix : Remove <p> tag in singlepic regex
- Bugfix : Correct format of shutter speed 
- Bugfix : Album name in Short code not useable  

V0.95 - 25.04.2008
- Bugfix : Correction in media-upload to fit with Wordpress 2.5.1
- Bugfix : Attribute_escape all objects in media-upload
- Bugfix : Correct sortorder for albums
- Bugfix : Typo correction (THX to Momo-I)

V0.94 - 20.04.2008
- Added : New filter option ngg_create_gallery_link
- Changed : Reduce amount of DB queries in albums (Big THX to Alexandr Kindras)
- Changed : Revert wpautop priority change. Doesn't good for other plugins

V0.93 - 12.04.2008